--- a/potato.css
+++ b/potato.css
@@ -22,7 +22,11 @@ h1 {
   top: 28px; left: 68px; 
 }
 /* Insert CSS for arms below this line*/
-
+#nose_image { 
+  position: absolute;
+  top: 150px;
+  left: 130px;
+}
 
 
 
